k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hw4
  labels:
    app.kubernetes.io/part-of: guestbook
